--- a/views/cart-thank-you.handlebars
+++ b/views/cart-thank-you.handlebars
@@ -1,2 +1,3 @@
-<p>Thank you for booking your trip with Meadowlark Travel, {{cart.billing.name}}!</p>
-<p>Your reservation number is {{cart.number}}, and an email has been sent to {{cart.billing.email}} for your records.</p>
+<p>Thank you for booking your tirp with Meadowlark Travel, {{cart.billing.name}}!</p>
+<p>Your reservation number is {{cart.number}}, and an email has been
+sent to {{cart.billing.email}} for your records.</p>
