--- a/views/vacations.handlebars
+++ b/views/vacations.handlebars
@@ -15,3 +15,11 @@
 	</div>
 {{/each}}
 
+<hr>
+
+<p>Currency:
+	<a href="/set-currency/USD" class="currency {{currencyUSD}}">USD</a>
+	<a href="/set-currency/GBP" class="currency {{currencyGBP}}">GBP</a>
+	<a href="/set-currency/BTC" class="currency {{currencyBTC}}">BTC</a>
+</p>
+
