--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,29 +1,29 @@
+body {
+  background-image: url("/img/background.png");
+}
 .btn-file {
-	position: relative;
-	overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
-
-.btn-file input[type=file]{
-	position: absolute;
-	top: 0;
-	right: 0;
-	min-width: 100%;
-	min-height: 100%;
-	font-size: 999px;
-	text-align: right;
-	filter: alpha(opacity=0);
-	opacity: 0;
-	outline: none;
-	background: white;
-	cursor: inherit;
-	display: block;
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 999px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
 }
-
 a.currency {
-	text-decoration: none;
+  text-decoration: none;
 }
-
 .currency.selected {
-	font-weight: bold;
-	font-size: 150%;
+  font-weight: bold;
+  font-size: 150%;
 }
