--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	    <title>Meadowlark Travel</title>
-		{{#if showTests}}
-			<link rel="stylesheet" href="/vendor/mocha.css">
-		{{/if}}
-		{{{_sections.head}}}
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Meadowlark Travel</title>
+	{{#if showTests}}
+	<link rel="stylesheet" href="/vendor/mocha.css">
+	{{/if}}
+	{{{_sections.head}}}
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
+	<style>
+		body {
+			padding-top: 50px;
+			padding-bottom: 20px;
+		}
+	</style>
+	<link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="{{ static '/css/main.css'}}">
 	
 </head>
 <body>
-	<header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
+	<header>
+		<img src="{{logoImage}}" alt="Meadowlark Travel Logo">
+		<div class="col-sm-2 pull-right">
+			{{! The following represents a lot of code duplication, so we will probably want to
+			change this in the future }}
+			{{#if cartItems}}
+			<a href="/cart"><img class="cartIcon" src="{{static '/img/shop/cart_full.png'}}"
+				alt="Cart Empty"></a>
+				{{else}}
+				<a href="/cart"><img class="cartIcon" src="{{static '/img/shop/cart_empty.png'}}"
+					alt="Cart Contains {{cartItems}} Items"></a>
+					{{/if}}
+				</div>		
+			</header>
 
 			{{#if flash}}
-				<div class="alert alert-dismissible alert-{{flash.type}}">
-					<button type="button" class="close" 
-						data-dismiss="alert" aria-hidden="true">&times;</button>
-					<strong>{{flash.intro}}</strong> {{{flash.message}}}
-				</div>
+			<div class="alert alert-dismissible alert-{{flash.type}}">
+				<button type="button" class="close" 
+				data-dismiss="alert" aria-hidden="true">&times;</button>
+				<strong>{{flash.intro}}</strong> {{{flash.message}}}
+			</div>
 			{{/if}}
 
-	{{{body}}}
+			{{{body}}}
 
 
 
@@ -49,11 +62,42 @@
 		<script src="/qa/tests-global.js"></script>
 		{{#if pageTestScript}}
 			<script src="{{pageTestScript}}"></script>
-		{{/if}}
+		{{/if}} 
 		<script>mocha.run();</script>
-	{{/if}} --}}
+		{{/if}} --}}
 
-	<script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
-	{{{_sections.jquery}}}
-</body>
-</html>
+		 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script>window.jQuery || document.write('<script src="{{static '/vendor/js/jquery-2.1.1.min.js'}}"><\/script>')</script>
+		
+
+		<script>
+			var IMG_CART_EMPTY = '{{static '/img/shop/cart_empty.png'}}';
+			var IMG_CART_FULL = '{{static '/img/shop/cart_full.png'}}';
+
+			// simple client-side cart implementation (mostly mocked for now)
+			var cart = (function() {
+				// normally we would get this from an AJAX call, or some similar method
+				var items = Array({{cartItems}});
+				return {
+					items: items,
+					isEmpty: function() {
+						return !items.length;
+					},
+					addItem: function(id) {
+						items.push(id);
+						$(document).trigger('meadowlark_cart_changed');
+					}
+				};
+			})();
+
+			// change cart icon when the cart has changed
+			$(document).on('meadowlark_cart_changed', function(){
+				$('header img.cartIcon').attr('src', cart.isEmpty() ?
+					IMG_CART_EMPTY : IMG_CART_FULL );
+			});
+		</script>
+
+		<script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
+		{{{_sections.jquery}}}
+	</body>
+	</html>
