--- a/views/cart-checkout.handlebars
+++ b/views/cart-checkout.handlebars
@@ -1,5 +1,5 @@
 <h1>Your Shopping Cart</h1>
-{{!-- <p>Please provide your email address so we can send you a confirmation of your order.</p>
+<p>Please provide your email address so we can send you a confirmation of your order.</p>
 <form class="form-horizontal newsletterForm" role="form" action="/cart/checkout" method="POST">
     <div class="form-group">
         <label for="fieldName" class="col-sm-2 control-label">Name</label>
@@ -21,4 +21,3 @@
         </div>
     </div>
 </form>
- --}}
